# prmse-local

./: .gitignore  compose.yaml  config.toml
.github/workflows/: build_release.yml
app/: eslint.config.js  package.json  vite.config.mts
app/.github/workflows/: build_release.yml
app/src/: main.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: error.rs  lib.rs
app/src-tauri/src/utils/: compress.rs  dicom.rs  mod.rs
app/src/apis/: common.ts  index.ts  tasks.ts
app/src/components/: HelloWorld.vue  ResultCard.vue  TaskTable.vue  Uploader.vue
app/src/layouts/: default.vue
app/src/router/: index.ts
app/src/types/: enums.ts  task.ts
app/src/utils/: dicom.ts  index.ts
app/src/views/: Ai.vue  Config.vue  Dicom.vue  DicomViewer.vue
client/: components.d.ts  eslint.config.js  index.html  package.json  vite.config.mts
client/src/: App.vue  main.ts
client/src/apis/: common.ts  index.ts  tasks.ts
client/src/components/: HelloWorld.vue  ResultCard.vue  TaskTable.vue  Uploader.vue
client/src/layouts/: default.vue
client/src/plugins/: vuetify.ts
client/src/router/: index.ts
client/src/types/: common.ts  enums.ts  index.ts  task.ts
client/src/utils/: dicom.ts
protos/: worker.proto
server/: .gitignore  config.toml  dockerfile  go.mod  go.sum  main.go  server.db
server/cmd/: main.go  wire.go  wire_gen.go
worker/: .dockerignore  .gitignore  requirements.txt  worker.py  worker_pb2.py  worker_pb2.pyi  worker_pb2_grpc.py
worker/sybil/: model.py
(+40 files in other folders)
