[package]
name = "prmse-app"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = "1.44.2"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-http = { version = "2", features = ["stream", "multipart"] }
tempfile = "3.19.1"
anyhow = "1.0.98"
thiserror = "2.0.12"
zip = "2.6.1"
dicom = "0.8.1"
tauri-plugin-dialog = "2"
futures-util = "0.3.31"
